--- a/test.html
+++ b/test.html
@@ -1,4 +1,16 @@
-<h1>hey. I'am a big heading</h1>
-<p>Hey. I'm a paragraph element. Cool huh?</p>
-<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a link!</a> 
+<!DOCTYPE HTML>
+<html>
+<head>
+	<title>test page</title>
+	</head>
+	<body>
+	<h1>hey. I'am a big heading</h1>
+	<p>Hey. I'm a <b>paragraph</b> element. Cool huh?</p>
+	<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a link!</a> 
+	<p>My Name is:<br> 
+	RonRon le Chat</p>
+	
 
+	<img src="img/cat.png">
+</body>
+</html>
